# honeypotcollection

./: .gitignore  .gitmodules  README.md
baitandswitch-b.2.1/: README  bns-HOWTO.html
baitandswitch-b.2.1/config/: bns_conf.bash
baitandswitch-b.2.1/routing/: bnsroutes.bash  bnstables.bash
baitandswitch-b.2.1/snort/: bns.diff  rules.script
baitandswitch-b.2.1/snort/non-production/: bns-snort-1.9.0.diff  bns-snort.1.9.1.diff  spo_alert_bns.c  spo_alert_bns.h
baitandswitch-b.2.1/switching/: fifoc.c  switchcore.c
honeybrid-0.1.5/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  honeybrid.conf  honeybrid.sh
honeybrid-0.1.5/doc/: Makefile  Makefile.am  Makefile.in  doxygen.cfg.bak  honeybrid.tag
honeybrid-0.1.5/doc/html/: annotated.html  annotated.js  classes.html  config__rules_8c.html  config__rules_8c.js  config__rules_8c__incl.dot  config__rules_8c__incl.md5  config__rules_8h.html  config__rules_8h.js  config__rules_8h__dep__incl.dot  config__rules_8h__dep__incl.md5  config__rules_8h_source.html  config__syntax_8c.html  config__syntax_8c.js  config__syntax_8c__incl.dot  config__syntax_8c__incl.md5  connections_8c.html  connections_8c.js  connections_8c__incl.dot  connections_8c__incl.md5  connections_8h.html  connections_8h.js  connections_8h__dep__incl.dot  connections_8h__dep__incl.md5  connections_8h_source.html  constants_8c.html  constants_8c.js  constants_8c__incl.dot  constants_8c__incl.md5  daemon_8c.html  daemon_8c.js  daemon_8c__incl.dot  daemon_8c__incl.md5  decision__engine_8c.html  decision__engine_8c.js  decision__engine_8c__incl.dot  decision__engine_8c__incl.map  decision__engine_8c__incl.md5  decision__engine_8h-source.html  decision__engine_8h.html  (+330 more)
honeybrid-0.1.5/doc/latex/: annotated.tex  daemon_8c.tex  decision__engine_8c.tex  decision__engine_8h.tex  doxygen.sty  err_8c.tex  files.tex  honeybrid_8c.tex  honeybrid_8h.tex  log_8c.tex  log_8h.tex  main.tex  mod__control_8c.tex  mod__counter_8c.tex  mod__hash_8c.tex  mod__random_8c.tex  mod__source_8c.tex  mod__yesno_8c.tex  modules_8c.tex  modules_8h.tex  netcode_8c.tex  netcode_8h.tex  pcap__tool_8c.tex  pcap__tool_8h.tex  realloc_8c.tex  refman.tex  rules_8c.tex  rules_8h.tex  struct_d_e__submit__args.tex  structconn__struct.tex  structethernet__hdr.tex  structexpected__data__struct.tex  structhih__struct.tex  structlog__event.tex  structmod__args.tex  structnode.tex  structpacket.tex  structpkt__struct.tex  structpseudotcphdr.tex  structtarget.tex  (+13 more)
honeybrid-0.1.5/scripts/: honeybrid_watchdog.sh  run_valgrind.sh  stats.pl
honeybrid-0.1.5/src/: Makefile.am  Makefile.in  config_rules.c  config_rules.h  config_rules.y  config_syntax.c  config_syntax.l  connections.c  connections.h  constants.c  constants.h  convenience.c  convenience.h  daemon.c  decision_engine.c  decision_engine.h  globals.h  honeybrid.c  honeybrid.h  log.c  log.h  mod_backpick_random.c  mod_control.c  mod_counter.c  mod_dionaea.c  mod_dionaea.h  mod_hash.c  mod_random.c  mod_source.c  mod_source_time.c  mod_vmi.c  mod_yesno.c  modules.c  modules.h  netcode.c  netcode.h  structs.c  structs.h  types.h
honeybrid-0.1.5/tools/dionaea_xmpp_listener/: Makefile  Makefile.am  Makefile.in  README  xmpp_listener.cpp
